# academic-reader

./: .gitignore  README.md  docker-compose.yml  repomix-output.xml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/src/core/: config.py  model_setup.py
backend/src/services/academic/: academic_api.py  academic_store.py
backend/src/services/academic/supports/: academic_parser.py
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/layout/: Header.tsx
frontend/components/ui/: CopyButton.tsx  ImageModal.tsx  MarkdownViewer.tsx  Mermaid.tsx
frontend/styles/: markdown_style.css
