[project]
name = "academic-reader-backend"
version = "0.1.0"
description = "Academic Paper Reader powered by Docling"
requires-python = ">=3.12"
dependencies = [
    # APIサーバー関連
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21", # PDFファイルのアップロード受け取りに必須
    "dotenv>=0.9.9",            # .env読み込み用
    
    # Docling & AIモデル関連
    "docling>=2.66.0",
    "torch>=2.6.0",             # GPUを用いた高速処理用
    "torchvision>=0.21.0",
    "rapidocr-onnxruntime>=1.4.4", # Doclingの日本語OCRエンジン用
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 120